edit pom.xml and tests