@@ -10,10 +10,10 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,12 +37,12 @@ class ServiceServiceTest {
     }
 
     @Test
-    void getAllServices() {
+    void shouldReturnAllServicesByProviderId() {
         Service service1 = new Service();
         service1.setId(1L);
         Service service2 = new Service();
         service2.setId(2L);
-        List<Service> services = Arrays.asList(service1, service2);
+        List<Service> services = List.of(service1, service2);
 
         when(serviceRepository.findByProviderId(1L)).thenReturn(services);
 
@@ -53,7 +53,7 @@ class ServiceServiceTest {
     }
 
     @Test
-    void getServiceById() {
+    void shouldReturnServiceById() {
         Service service = new Service();
         service.setId(1L);
 
@@ -67,7 +67,7 @@ class ServiceServiceTest {
     }
 
     @Test
-    void createService() {
+    void shouldCreateService() {
         Provider provider = new Provider();
         provider.setId(1L);
 
@@ -88,21 +88,27 @@ class ServiceServiceTest {
     }
 
     @Test
-    void createService_ProviderNotFound() {
+    void shouldThrowExceptionWhenProviderNotFoundForCreatingService() {
         when(providerRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThrows(ResponseStatusException.class, () -> serviceService.createService(new Service(), 1L));
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class,
+                () -> serviceService.createService(new Service(), 1L));
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
+        assertEquals("Provider not found", exception.getReason());
+
         verify(providerRepository, times(1)).findById(1L);
         verify(serviceRepository, never()).save(any(Service.class));
     }
 
     @Test
-    void updateService() {
+    void shouldUpdateService() {
         Service existingService = new Service();
         existingService.setId(1L);
         existingService.setName("Old Name");
         existingService.setPrice(BigDecimal.valueOf(100));
         existingService.setDuration(60);
+        Provider provider = new Provider();
+        existingService.setProvider(provider);
 
         Service updatedService = new Service();
         updatedService.setName("New Name");
@@ -112,26 +118,33 @@ class ServiceServiceTest {
         when(serviceRepository.findById(1L)).thenReturn(Optional.of(existingService));
         when(serviceRepository.save(any(Service.class))).thenReturn(updatedService);
 
+        updatedService.setProvider(existingService.getProvider());
         Service result = serviceService.updateService(1L, updatedService);
 
+        assertEquals(existingService.getProvider(), result.getProvider());
         assertEquals("New Name", result.getName());
         assertEquals(BigDecimal.valueOf(150), result.getPrice());
         assertEquals(90, result.getDuration());
+        assertEquals(provider, result.getProvider());
         verify(serviceRepository, times(1)).findById(1L);
         verify(serviceRepository, times(1)).save(any(Service.class));
     }
 
     @Test
-    void updateService_NotFound() {
+    void shouldThrowExceptionWhenUpdatingNonExistingService() {
         when(serviceRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThrows(ResponseStatusException.class, () -> serviceService.updateService(1L, new Service()));
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class,
+                () -> serviceService.updateService(1L, new Service()));
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
+        assertEquals("Service not found", exception.getReason());
+
         verify(serviceRepository, times(1)).findById(1L);
         verify(serviceRepository, never()).save(any(Service.class));
     }
 
     @Test
-    void deleteService() {
+    void shouldDeleteService() {
         serviceService.deleteService(1L);
 
         verify(serviceRepository, times(1)).deleteById(1L);
